worked on pseudo-class selectors

--- a/practice/html/week_4/multipage-css/styles/styles.css
+++ b/practice/html/week_4/multipage-css/styles/styles.css
@@ -11,6 +11,10 @@ header, main, footer {
     font-size: 36px;
 }
 
+header {
+    padding-right: 0;
+    width: 950px;
+}
 header, main {
     border-bottom: solid black 5px;
 }
@@ -21,6 +25,7 @@ header h1 {
     text-align: center;
     color: red;
     line-height: 84px;
+    
 }
 
 #custom-height {
@@ -33,4 +38,41 @@ header h1 {
 
 #title-container {
     margin-left: 200px;
+}
+
+nav ul li {
+    display: inline-block;
+    background-color: red;
+    color: white;
+    padding: 12px;
+    margin-top: 25px;
+    text-transform: uppercase;
+    font-family: "Arial";
+    
+    
+}
+nav ul li:hover {
+    background-color: yellow;
+}
+nav ul li a {
+    text-decoration: none;
+}
+nav ul {
+    text-align: right;
+}
+
+nav ul li a:link {
+
+}
+
+nav ul li a:active {
+
+}
+nav ul li a:visited {
+
+}
+
+nav ul li a:hover {
+    color: green;
+    background-color: yellow;
 }
