--- a/practice/html/week_4/multipage-css/styles/styles.css
+++ b/practice/html/week_4/multipage-css/styles/styles.css
@@ -130,7 +130,6 @@ footer #social-links ul li {
 }
 
 
-
 #social-links ul li a:hover {
     color: white;
     background-color: red;
@@ -146,12 +145,63 @@ main {
 }
 
 main h1 {
-    font-size: 48px;
+    font-family: "Zapfino";
+    font-size: 36px;
     text-align: center;
-    text-transform: uppercase;
+    margin-top: 30px;
+    /* text-transform: uppercase; */
 }
 
 main p {
     font-size: 24px;
 }
 /* MAIN DEFAULT STYLES END */
+
+/* HOME PAGE STYLE START */
+
+main#homepage p {
+    margin: 20px;
+    line-height: 30px;
+    text-align: justify;
+}
+/* HOME PAGE STYLE END */
+
+/* GALLERY STYLE START */
+
+#gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 35px;
+}
+
+#gallery div {
+    width: 200px;
+}
+
+#gallery div img {
+    width: 200px;
+    margin-bottom: 20px;
+}
+
+
+/* GALLERY STYLE END */
+
+/* CONTACT STYLE START */
+
+#contact-flexbox {
+    display: flex;
+    height: 300px;
+}
+
+#contact-flexbox div:first-child {
+    flex-grow: 3;
+    background-color: grey;
+   
+}
+
+#contact-flexbox div:last-child {
+    flex-grow: 1;
+    background-color: silver;
+}
+/* CONTACT STYLE END */
