worked on styles for multipage contact page

--- a/practice/html/week_4/multipage-css/styles/styles.css
+++ b/practice/html/week_4/multipage-css/styles/styles.css
@@ -1,5 +1,6 @@
+
 body {
-    background-color: red;
+    background-color: turquoise;
 
 }
 
@@ -16,14 +17,14 @@ header {
     width: 950px;
 }
 header, main {
-    border-bottom: solid red 5px;
+    border-bottom: solid turquoise 5px;
 }
 
 header h1 {
     font-family: "Zapfino";
     font-size: 48px;
     text-align: center;
-    color: red;
+    color: turquoise;
     line-height: 84px;
     
 }
@@ -45,7 +46,7 @@ header h1 {
 
 nav ul li {
     display: inline-block;
-    background-color: red;
+    background-color: turquoise;
     color: white;
     padding: 12px;
     margin-top: 25px;
@@ -83,7 +84,7 @@ nav ul li a:active {
 /* FOOTER STYLES START */
 
 footer {
-    color: red;
+    color: turquoise;
     font-family: "Arial";
     line-height: 48px;
 }
@@ -100,7 +101,7 @@ footer #social-links ul {
 }
 footer #social-links ul li {
     display: inline-block;
-    border: solid red 1px;
+    border: solid turquoise 1px;
     border-radius: 5px;
     padding: 0px;
     line-height: 100%;
@@ -115,24 +116,24 @@ footer #social-links ul li {
 }
 
 /* footer #social-links ul li:hover {
-    background-color: red;
+    background-color: turquoise;
     color: white;
 } */
 
 #social-links ul li a:link {
     text-decoration: none;
-    color: red;
+    color: turquoise;
     line-height: 50px;
 }
 
 #social-links ul li a:visited {
-    color: red;
+    color: turquoise;
 }
 
 
 #social-links ul li a:hover {
     color: white;
-    background-color: red;
+    background-color: turquoise;
 }
 
 /* FOOTER STYLES END */
@@ -141,7 +142,7 @@ footer #social-links ul li {
 
 main {
     font-family: "Arial";
-    color: red;
+    color: turquoise;
 }
 
 main h1 {
@@ -189,19 +190,69 @@ main#homepage p {
 
 /* CONTACT STYLE START */
 
+#contact > hr {
+    border: dotted 2px turquoise;
+}
+
 #contact-flexbox {
     display: flex;
-    height: 300px;
+    
 }
 
 #contact-flexbox div:first-child {
     flex-grow: 3;
-    background-color: grey;
+    
    
 }
 
 #contact-flexbox div:last-child {
     flex-grow: 1;
-    background-color: silver;
 }
+
+#contact-form {
+    width: 400px;
+    margin: 20px;
+}
+
+#contact-form label {
+    font-size: 24px;
+}
+
+#contact-form input {
+    border: dashed 5px turquoise;
+    width: 400px;
+    height: 50px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    font-size: 18px;
+    color: turquoise;
+    padding-left: 11px;
+    }
+
+#contact-form .form-buttons {
+    margin: 20px;
+    color: turquoise;
+    font-size: 18px;
+    width: 360px;
+}
+
+#contact-form .form-buttons:hover {
+    border: solid turquoise 5px;
+    cursor: pointer;
+}
+
+#contact-form textarea {
+    border: dashed 5px turquoise;
+    border-radius: 15px;
+    width: 100%;
+    max-width: 400px;
+    height: 200px;
+    box-sizing: border-box;
+    padding: 11px;
+    font-size: 18px;
+    color: turquoise;
+}
+
+
+
 /* CONTACT STYLE END */
