--- a/projects/portfolio_docs/portfolio.css
+++ b/projects/portfolio_docs/portfolio.css
@@ -19,6 +19,13 @@ body {
 h1 {
     font-family: 'Josefin Slab', serif;
 }
+
+#vlad {
+    float: left;
+    margin: 0 8px 0 0;
+    /* border: solid gray 1px; */
+    border-radius: 5%;
+}
 /* MOBILE GRID */
 
 #wrapper {
@@ -176,7 +183,7 @@ ul.projects {
 input {
     width: 500px;
     height: 50px;
-    background-color: #E2B72C;
+    background-color: #5FA6B6;
     color: white;
     font-size: .9em;
     font-weight: bolder;
@@ -203,7 +210,7 @@ input {
 }
 
 textarea {
-    background-color: #E2B72C;
+    background-color: #5FA6B6;
     font-size: .9em;
     font-weight: bolder;
     padding-left: 5px;
@@ -213,3 +220,4 @@ textarea {
 fieldset {
     background-color: ;
 }
+
