--- a/projects/portfolio_docs/portfolio.css
+++ b/projects/portfolio_docs/portfolio.css
@@ -29,7 +29,44 @@ h1 {
 /* MOBILE GRID */
 
 #wrapper {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-rows: auto auto auto auto;
+    max-width: 960px;
+    margin: 0 auto;
+    margin-left: 5px;
+    margin-right: 5px;
+    grid-template-areas:
+            "nav"
+            "header"
+            "main"
+            "footer";
 
+}
+
+nav {
+    grid-area: nav;
+    width: 100%;
+}
+
+header {
+    grid-area: header;
+}
+
+main {
+    grid-area: main;
+    text-align: left;
+}
+
+footer {
+    grid-area: footer;
+    margin-top: 10px;
+}
+
+/* PARAGRAPH STYLES */
+
+.firstletter::first-letter {
+    font-size: 1.7em;
 }
 
 /* MAIN NAVIGATION */
@@ -66,9 +103,84 @@ nav li > a:hover {
     color: #333333;
 }
 
-nav a img {
-    border-radius: 50%;
+/* SKILLS LIST */
+
+ul.skills {
+    padding: 0;
+    text-align: center;
 }
+
+.skills li {
+    border-radius: 6px;
+    display: inline-block;
+    background: #e24d20;
+    color: white;
+    padding: 5px 5px;
+    margin: 2px;
+}
+
+.skills li:nth-child(odd) {
+    background: teal;
+}
+
+/* PROJECTS LIST */
+
+ul.projects {
+    padding: 0;
+    text-align: center;
+}
+
+.projects li {
+    display: inline-block;
+}
+
+.projectmain {
+    margin-bottom: 100px;
+}
+
+/* FORM INPUT */
+
+input {
+    width: 270px;
+    height: 50px;
+    background-color: #5FA6B6;
+    color: white;
+    font-size: .9em;
+    font-weight: bolder;
+    padding-left: 5px;
+}
+
+::placeholder {
+    color: white;
+    opacity: 1;
+    font-size: 1.2em;
+    font-weight: bolder;
+}
+
+.submit {
+    width: 120px;
+    height: 25px;
+    background-color: #3AB60F;
+}
+
+.reset {
+    width: 120px;
+    height: 25px;
+    background-color: #DE4F1F;
+}
+
+textarea {
+    background-color: #5FA6B6;
+    font-size: .9em;
+    font-weight: bolder;
+    padding-left: 5px;
+    color: white;
+}
+
+fieldset {
+    background-color: ;
+}
+
 /* SOCIAL MEDIA FOOTER ICONS */
 
 footer ul {
@@ -111,18 +223,30 @@ a.social:hover {
     opacity: 1;
 }
 
-/* PARAGRAPH STYLES */
 
-.firstletter::first-letter {
-    font-size: 1.7em;
-}
+
+/* CSS FOR DESKTOPS */
+
+@media screen and (min-width: 481px) {
+    #wrapper {
+        display: grid;
+        grid-template-columns: auto auto auto auto;
+        grid-template-rows: auto auto auto auto;
+        max-width: 960px;
+        margin: 0 auto;
+        grid-template-areas: 
+                "nav nav nav nav nav"
+                "header header header header"
+                "main main main main"
+                "footer footer footer footer";
+    }
 
 /* MAIN NAVIGATION FOR DESKTOPS */
 
 nav li {
-    float: right;
+    float: left;
     border-right: 1px solid #bbb;
-}
+    }
 
 /* PARAGRAPH STYLE */
 
@@ -136,58 +260,23 @@ nav li {
     padding-left: 20px;
 }
 
-/* CSS FOR DESKTOPS */
+/* FORM */
 
-#wrapper {
-    display: grid;
-    max-width: 960px;
-    margin: 0 auto;
-}
-
-/* SKILLS LIST */
-
-ul.skills {
-    padding: 0;
+form {
     text-align: center;
-}
-
-.skills li {
-    border-radius: 6px;
-    display: inline-block;
-    background: #e24d20;
-    color: white;
-    padding: 5px 5px;
-    margin: 2px;
-}
-
-.skills li:nth-child(odd) {
-    background: teal;
-}
-
-/* PROJECTS LIST */
-
-ul.projects {
-    padding: 0;
-}
-
-.projects li {
-    display: inline-block;
-}
-
-.projectmain {
-    margin-bottom: 100px;
 }
 
 /* FORM INPUT */
 
 input {
-    width: 500px;
+    width: 270px;
     height: 50px;
     background-color: #5FA6B6;
     color: white;
     font-size: .9em;
     font-weight: bolder;
     padding-left: 5px;
+    margin: 0 auto;
 }
 
 ::placeholder {
@@ -215,9 +304,7 @@ textarea {
     font-weight: bolder;
     padding-left: 5px;
     color: white;
-}
+    
+    }
 
-fieldset {
-    background-color: ;
 }
-
